2006-02-12  Dariush Molavi  <dari@nukedgallery.net> 0.5.0
	* Merged EMBED_API_DEV into HEAD.

2006-01-26  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b2
	* Change: Modified block files to use new EmbedAPI.

2006-01-10  Dariush Molavi  <dari@nukedgallery.net> 0.5.0-b1
	* Change: Modified all code to work with new EmbedAPI. Still need to add
	  API version checking, etc.
	
2006-01-03  Dariush Molavi  <dari@nukedgallery.net> 
	* Fix: Changed ImageBlock file to include image size parameter. No version bump.

2005-12-31  Dariush Molavi  <dari@nukedgallery.net> 0.4.3
	* Fix: Modified index.php file to detect when using Nuke Evolution.  This 
	  fixes the "blank screen" issues that most Evo users experience.
	* Change: Updated Russian language files to UTF-8 (thanks Lexaero).

2005-12-12  Dariush Molavi  <dari@nukedgallery.net> 0.4.2
	* Fix: Variable name in block files.
	* Fix: Removed obsolete references in Readme.
	* New: Russian language files (thanks Lexaero).

2005-12-11  Dariush Molavi  <dari@nukedgallery.net> 0.4.1
	* Fix: Updated Your_Account hack in Readme to reflect new configuration info 
	  that is stored in the database.
	* Fix: Updated block files to pull config data from database.

2005-12-08  Dariush Molavi  <dari@nukedgallery.net> 0.4.0
	* New: Update checks performed when setting up the integration package, 
	  and when admin user visits integrated installation.  This lets the admin 
	  know if there is an update to the integration package that they should download.
	* New: Integration config info is now stored in the phpnuke database, old 
	  gallery2.cfg file has been removed.
	* Fix: Blank popup issues have been resolved (thanks to Vermithrax for helping 
	  debug and fix).
	* Fix: Progress bar on the user export now works in IE and FF (thanks to Vermithrax 
	  for helping debug and fix).
	* Fix: Solved re-declaration errors.  Added note in the Readme file for users of 
	  old/new versions of PHPNuke and what they need to do to avoid the error. 
