@@ -234,7 +234,7 @@
 		<img alt="Gallery 2" src="images/g2Logo.gif">
 		</div>
 		<p>
-		Welcome to Gallery 2.0. This integration package is part of the 
+		Welcome to Gallery 2.1. This integration package is part of the 
 		ongoing effort to seamlessly integrate Gallery 2 in PHPNuke.  
 		Please read through this document carefully
 		before integrating Gallery 2 and before asking for help.  We have
@@ -249,7 +249,7 @@
 		</h2>
 		<p>
 		This package contains all the files and directories you will need 
-		in order to integrate Gallery 2 into your PHPNuke-powered website.
+		in order to integrate Gallery 2.1 into your PHPNuke-powered website.
 		Please keep in mind, though, that this integration package, is still being 
 		developed and debugged.  While most heavy development
 		has stopped, bugs are still present and being fixed as they are found.  
@@ -268,7 +268,7 @@
 		</a>
 		</p>
 		<p>
-		Simply put, this package allows you to integrate Gallery 2 into PHPNuke.  Among 
+		Simply put, this package allows you to integrate Gallery 2.1 into PHPNuke.  Among 
 		it's many features, it:
 		<ol>
 		<li>Creates an administration panel in the PHPNuke administration page.</li>
@@ -287,10 +287,17 @@
 		</a>
 		</p>
 		<div class="important">
+		<h3>CRITICAL</h3>
+		<p>
+		Starting with version 0.5.0 of the PHPNuke integration, this integration package will only work with Gallery 2.1 or newer.  
+		For more information, please read <a href="http://www.nukedgallery.net/postt2451.html">this post</a>.
+		</p></div>
+		<br />
+		<div class="important">
 		<h3>NOTICE</h3>
 		<p>
-		This integration package <b>does not</b> install or configure Gallery 2 for you.  Before you 
-		proceed with this integration, you <b>must</b> install and configure Gallery 2.  Additionally, Gallery 2 <b>must</b>
+		This integration package <b>does not</b> install or configure Gallery 2.1 for you.  Before you 
+		proceed with this integration, you <b>must</b> install and configure Gallery 2.1.  Additionally, Gallery 2.1 <b>must</b>
 		be installed into the "modules" directory of your PHPNuke installation.
 		</p></div>
 		<br />
@@ -318,7 +325,7 @@
 		If you are using a version of PHPNuke <b>older than</b> version 7.5, you must delete the following files from the integration package:<br />
 		html/modules/gallery2/admin/case.php<br />
 		html/modules/gallery2/admin/links.php<br /><br />
-		If you are using a version of PHPNuke <b>newer than</b> version 7.5, you must delete the following files from the integration package:<br />
+		If you are using a version of PHPNuke <b>equal to or newer than</b> version 7.5, you must delete the following files from the integration package:<br />
 		html/admin/case/case.gallery2.php<br />
 		html/admin/links/links.gallery2.php
 		</p></div>
@@ -588,8 +595,8 @@ function g2_init() {
 
       <a href="http://gallery.sourceforge.net"><img
 	  src="images/gallery.gif"
-	  alt="Gallery 2.0 RC-1"
-	  title="Gallery 2.0 RC-1"
+	  alt="Gallery 2.1"
+	  title="Gallery 2.1"
 	  style="border: none" width="80" height="15"/></a>
 
     </p>
